<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_bg"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/ll_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent" >

        <ImageView
            android:id="@+id/home_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo_desc"
            app:srcCompat="@drawable/home_logo"
            tools:ignore="ImageContrastCheck" />

        <LinearLayout
            android:id="@+id/ll_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <Button
                android:id="@+id/bt_compare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#816432"
                android:text="@string/bt_compare" />

            <Button
                android:id="@+id/bt_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#c49963"
                android:text="@string/bt_order" />

            <Button
                android:id="@+id/bt_compose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#b46c2c"
                android:text="@string/bt_compose" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>