<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_bg"
    tools:context=".compareNumbers">

    <LinearLayout
        android:id="@+id/ll_compare"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tv_instruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="25sp" />

        <LinearLayout
            android:id="@+id/ll_option1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:background="@drawable/border"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_option1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="30sp" />

            <LinearLayout
                android:id="@+id/ll_option1_iv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                tools:ignore="NestedWeights" >

                <ImageView
                    android:id="@+id/iv_option1_img1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/capy_icon"
                    app:srcCompat="@drawable/capy_icon"
                    tools:ignore="ImageContrastCheck" />

                <ImageView
                    android:id="@+id/iv_option1_img2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/capy_icon"
                    app:srcCompat="@drawable/capy_icon2"
                    tools:ignore="ImageContrastCheck" />

                <ImageView
                    android:id="@+id/iv_option1_img3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/capy_icon"
                    app:srcCompat="@drawable/capy_icon3" />

                <ImageView
                    android:id="@+id/iv_option1_img4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/capy_icon"
                    app:srcCompat="@drawable/capy_icon4" />

                <ImageView
                    android:id="@+id/iv_option1_img5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/capy_icon"
                    app:srcCompat="@drawable/capy_icon5" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_option1_iv2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_option1_img6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/capy_icon"
                    app:srcCompat="@drawable/capy_icon"
                    tools:ignore="ImageContrastCheck" />

                <ImageView
                    android:id="@+id/iv_option1_img7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/capy_icon"
                    app:srcCompat="@drawable/capy_icon2"
                    tools:ignore="ImageContrastCheck" />

                <ImageView
                    android:id="@+id/iv_option1_img8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/capy_icon"
                    app:srcCompat="@drawable/capy_icon3" />

                <ImageView
                    android:id="@+id/iv_option1_img9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/capy_icon"
                    app:srcCompat="@drawable/capy_icon4" />

                <ImageView
                    android:id="@+id/iv_option1_img10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/capy_icon"
                    app:srcCompat="@drawable/capy_icon5" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_option2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:background="@drawable/border"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_option2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="30sp" />

            <LinearLayout
                android:id="@+id/ll_option2_iv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                tools:ignore="NestedWeights">

                <ImageView
                    android:id="@+id/iv_option2_img1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/capy_icon"
                    app:srcCompat="@drawable/capy_icon"
                    tools:ignore="ImageContrastCheck" />

                <ImageView
                    android:id="@+id/iv_option2_img2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/capy_icon"
                    app:srcCompat="@drawable/capy_icon2"
                    tools:ignore="ImageContrastCheck" />

                <ImageView
                    android:id="@+id/iv_option2_img3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/capy_icon"
                    app:srcCompat="@drawable/capy_icon3" />

                <ImageView
                    android:id="@+id/iv_option2_img4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/capy_icon"
                    app:srcCompat="@drawable/capy_icon4" />

                <ImageView
                    android:id="@+id/iv_option2_img5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/capy_icon"
                    app:srcCompat="@drawable/capy_icon5" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_option2_iv2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_option2_img6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/capy_icon"
                    app:srcCompat="@drawable/capy_icon"
                    tools:ignore="ImageContrastCheck" />

                <ImageView
                    android:id="@+id/iv_option2_img7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/capy_icon"
                    app:srcCompat="@drawable/capy_icon2"
                    tools:ignore="ImageContrastCheck" />

                <ImageView
                    android:id="@+id/iv_option2_img8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/capy_icon"
                    app:srcCompat="@drawable/capy_icon3" />

                <ImageView
                    android:id="@+id/iv_option2_img9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/capy_icon"
                    app:srcCompat="@drawable/capy_icon4" />

                <ImageView
                    android:id="@+id/iv_option2_img10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/capy_icon"
                    app:srcCompat="@drawable/capy_icon5" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_buttons"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1.5"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_weight="1"
                android:backgroundTint="#DFC0A9"
                android:text="@string/bt_next"
                android:textColor="@color/black"
                tools:ignore="ButtonStyle,NestedWeights" />

            <Button
                android:id="@+id/bt_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_weight="1"
                android:backgroundTint="#DFC0A9"
                android:text="@string/bt_home"
                android:textColor="@color/black"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>